# allfather

./: Dockerfile  README.md  compose.yaml  pyproject.toml
allfather/: main.py
allfather/telegram/: client.py  handler.py
