[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allfather"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Itzik", email = "74200683+itzik1058@users.noreply.github.com" },
]
maintainers = [
    { name = "Itzik", email = "74200683+itzik1058@users.noreply.github.com" },
]
dependencies = ["aiogram"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
allfather = "allfather.main:main"

[tool.hatch.version]
path = "allfather/__init__.py"
